--- a/packages/client/tsconfig.json
+++ b/packages/client/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "target": "ES2020",
     "lib": ["dom", "dom.iterable", "esnext"],
-    "types": ["react", "react-dom"],
+    "types": ["react", "react-dom", "jest"],
     "allowJs": true,
     "skipLibCheck": true,
     "esModuleInterop": true,
@@ -33,7 +33,7 @@
       "markdown/*": ["src/markdown/*"]
     }
   },
-  "include": ["src", "postcss.config.js", "tailwind.config.js", "tsconfig.json", "webpack.config.js", "globals.d.ts"],
+  "include": ["src", "test", "postcss.config.js", "tailwind.config.js", "tsconfig.json", "webpack.config.js", "globals.d.ts"],
   "exclude": [
     "**/node_modules/*",
     "**/dist/*",
