--- a/packages/server/tsconfig.json
+++ b/packages/server/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+    "types": ["jest", "node"],
     "typeRoots": ["node_modules/@types", "src/types", "node_modules/@testing-library"],
     "outDir": "dist",
     "esModuleInterop": true,
