Apply the tsconfig to the tests directory.
This makes VSCode actually see the imports working in test code. Does
not appear to actually matter to tests.

--- a/packages/server/tsconfig.json
+++ b/packages/server/tsconfig.json
@@ -28,5 +28,5 @@
     "noFallthroughCasesInSwitch": true
   },
   "exclude": ["node_modules"],
-  "include": ["src/**/*.js", "src/**/*.ts", "src/**/*.tsx", "src", "../utils/src"]
+  "include": ["src/**/*.js", "src/**/*.ts", "src/**/*.tsx", "src", "../utils/src", "test/**/*.js", "test/**/*.ts"]
 }
