Temporary module aliases used in tests.
Later will move the tests to the appropriate packages and then won't
need aliases.

--- a/packages/server/tsconfig.json
+++ b/packages/server/tsconfig.json
@@ -8,6 +8,8 @@
     "jsx": "react",
     "baseUrl": "./",
     "paths": {
+      "@client/*": ["../client/src/*"],
+      "@jobs/*": ["../jobs/src/*"],
       "@utils/*": ["../utils/src/*"],
       "serverutils/*": ["src/serverutils/*"],
       "routes/*": ["src/routes/*"],
