--- a/packages/server/tsconfig.json
+++ b/packages/server/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "types": ["jest", "node"],
-    "typeRoots": ["node_modules/@types", "src/types", "node_modules/@testing-library"],
+    "typeRoots": ["node_modules/@types", "../../node_modules/@types", "src/types"],
     "outDir": "dist",
     "esModuleInterop": true,
     "target": "ES2020",
