Client tests passing with jsdom and react testing lib.

--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -13,6 +13,8 @@
     "@stripe/stripe-js": "^7.9.0",
     "@svgr/webpack": "^5.5.0",
     "@tailwindcss/typography": "^0.5.16",
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.0",
     "@types/node": "^16.18.70",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
@@ -23,6 +25,7 @@
     "classnames": "^2.5.1",
     "emoji-regex": "^10.6.0",
     "github-slugger": "^2.0.0",
+    "jest-environment-jsdom": "^30.2.0",
     "nearley": "^2.20.1",
     "papaparse": "^5.5.3",
     "react-audio-player": "^0.17.0",
