--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@types/express-flash": "^0.0.5",
     "autoprefixer": "^10.4.19",
     "crypto": "^1.0.1",
+    "globals": "^16.5.0",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.3",
     "typescript": "^5.4.5"
