--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "@eslint/compat": "^1.4.1",
     "@eslint/js": "^9.39.1",
     "@types/node": "^20.12.11",
+    "eslint": "^9.11.1",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-simple-import-sort": "^12.1.1",
