--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -32,9 +32,9 @@ jobs:
             packages/scripts/node_modules
             packages/jobs/node_modules
             packages/cdk/node_modules
-          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+          key: ${{ runner.os }}-node-v2-${{ hashFiles('**/package-lock.json') }}
           restore-keys: |
-            ${{ runner.os }}-node-
+            ${{ runner.os }}-node-v2-
 
       - uses: actions/setup-node@v4
         with:
@@ -44,7 +44,7 @@ jobs:
         run: corepack enable
 
       - name: Install dependencies
-        run: npm ci
+        run: npm install
 
       - name: Install client dependencies
         run: |
