--- a/packages/server/tsconfig.json
+++ b/packages/server/tsconfig.json
@@ -29,15 +29,13 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true
   },
-  "exclude": ["node_modules"],
+  "exclude": ["node_modules", "src/client"],
   "include": [
     "src/**/*.js",
     "src/**/*.ts",
     "src/**/*.tsx",
     "src",
     "../utils/src",
-    "test/**/*.js",
-    "test/**/*.ts",
     "jest.setup.ts",
     "jest.config.ts"
   ]
