--- a/packages/server/tsconfig.json
+++ b/packages/server/tsconfig.json
@@ -30,13 +30,5 @@
     "noFallthroughCasesInSwitch": true
   },
   "exclude": ["node_modules", "src/client"],
-  "include": [
-    "src/**/*.js",
-    "src/**/*.ts",
-    "src/**/*.tsx",
-    "src",
-    "../utils/src",
-    "jest.setup.ts",
-    "jest.config.ts"
-  ]
+  "include": ["src/**/*.js", "src/**/*.ts", "src/**/*.tsx", "src", "../utils/src", "jest.setup.ts", "jest.config.ts"]
 }
