--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -54,7 +54,7 @@
     "tailwind": "npx postcss ./src/css/stylesheet.css -o ../server/public/css/stylesheet.css --watch",
     "tailwind:build": "npx postcss ./src/css/stylesheet.css -o ../server/public/css/stylesheet.css",
     "start": "npm run tailwind & webpack serve",
-    "build": "npm run tailwind:build && webpack",
+    "build": "cross-env NODE_ENV=production npm run tailwind:build && cross-env NODE_ENV=production webpack && node generate-manifest.js",
     "test": "npx jest --coverage=false",
     "test:watch": "npx jest --watch --coverage=false",
     "test:coverage": "npx jest --coverage",
@@ -95,6 +95,7 @@
     "babel-loader": "^9.1.3",
     "babel-plugin-module-resolver": "^5.0.2",
     "core-js": "^3.46.0",
+    "cross-env": "^7.0.3",
     "css-loader": "^7.1.2",
     "file-loader": "^6.2.0",
     "mini-css-extract-plugin": "^2.9.0",
