--- a/packages/server/.env_EXAMPLE
+++ b/packages/server/.env_EXAMPLE
@@ -9,6 +9,7 @@ DATA_BUCKET="local"
 DOMAIN="localhost:8080"
 DOWNTIME_ACTIVE="false"
 DYNAMO_PREFIX="LOCAL"
+DYNAMO_TABLE="test-table"
 ENV="development"
 NITROPAY_ENABLED="false"
 NODE_ENV="development"
