migrate admin routes to typescript

--- a/packages/server/tsconfig.json
+++ b/packages/server/tsconfig.json
@@ -13,7 +13,8 @@
       "@utils/*": ["../utils/src/*"],
       "serverutils/*": ["src/serverutils/*"],
       "routes/*": ["src/routes/*"],
-      "dynamo/*": ["src/dynamo/*"]
+      "dynamo/*": ["src/dynamo/*"],
+      "types/*": ["src/types/*"],
     },
     "module": "commonjs",
     "moduleResolution": "node",
