fix jobs lambda

--- a/packages/dailyJobsLambda/package.json
+++ b/packages/dailyJobsLambda/package.json
@@ -14,7 +14,9 @@
   "dependencies": {
     "@solutions-unified/utilities": "^1.1.15",
     "archiver": "^7.0.1",
-    "@aws-sdk/lib-dynamodb": "^3.927.0"
+    "@aws-sdk/lib-dynamodb": "^3.927.0",
+    "seedrandom": "^2.4.4",
+    "shuffle-seed": "^1.1.6"
   },
   "devDependencies": {
     "esbuild": "^0.25.5"
