--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -8,16 +8,17 @@
     "copy-client": "npm run copy-prod-client && npm run copy-dev-client",
     "copy-public": "copyfiles -u 0 -a 'public/**' dist/server/",
     "fix-external-paths": "npx resolve-tspaths && node scripts/fixExternalPaths.js",
-    "build": "npx tsc && npm run fix-external-paths && npm run copy-client && copyfiles -u 1 'src/**/*.pug' dist/server/src && npm run copy-public && copyfiles -u 2 'src/emails/**/*' dist/server/src/emails",
+    "build": "npm run write-git-info && npx tsc && npm run fix-external-paths && npm run copy-client && copyfiles -u 1 'src/**/*.pug' dist/server/src && npm run copy-public && copyfiles -u 2 'src/emails/**/*' dist/server/src/emails",
     "type-check": "npx tsc --noEmit",
     "start": "node server.js",
-    "dev": "nodemon -r tsconfig-paths/register src/index.ts",
+    "dev": "npm run write-git-info && nodemon -r tsconfig-paths/register src/index.ts",
     "publish": "npm run build && node publish.js",
     "clean": "rm -rf dist/ node_modules/ private/ ./src/client",
     "test": "npx jest --coverage=false",
     "test:watch": "npx jest --watch --coverage=false",
     "test:coverage": "npx jest --coverage",
-    "test:ci": "npx jest --coverage --coverageReporters json-summary text"
+    "test:ci": "npx jest --coverage --coverageReporters json-summary text",
+    "write-git-info": "ts-node scripts/write-git-info.ts"
   },
   "keywords": [],
   "author": "",
