some new features
- drafts of a cube no longer update the cube's timestamp, bumping a cube's position in the "Recently Updated" list
- Added cube restore, to rollback the cards in a cube to a previous state
- Added self service account deletion
- Added the ability to edit attributes of newly added cards during a pending cube edit, allowing for workflows such as tag-on-create, specify a version, specify a status, etc.

--- a/packages/server/public/manifest.json
+++ b/packages/server/public/manifest.json
@@ -9,7 +9,7 @@
   "CardPage": "/js/CardPage.1d08c28e.bundle.js",
   "CardSearchPage": "/js/CardSearchPage.9f99a214.bundle.js",
   "CommentPage": "/js/CommentPage.b21ebb25.bundle.js",
-  "commons": "/js/commons.0dd8108c.bundle.js",
+  "commons": "/js/commons.8fae860f.bundle.js",
   "ContactPage": "/js/ContactPage.e6567e49.bundle.js",
   "CreateNewRecordPage": "/js/CreateNewRecordPage.f67560d1.bundle.js",
   "CreateRecordFromDraftPage": "/js/CreateRecordFromDraftPage.982c73a1.bundle.js",
@@ -22,9 +22,10 @@
   "CubeDraftPage": "/js/CubeDraftPage.80a0ebcb.bundle.js",
   "CubeHistoryPage": "/js/CubeHistoryPage.fd9ff8c3.bundle.js",
   "CubeListPage": "/js/CubeListPage.145a6ee0.bundle.js",
-  "CubeOverviewPage": "/js/CubeOverviewPage.2a417e10.bundle.js",
+  "CubeOverviewPage": "/js/CubeOverviewPage.7114c136.bundle.js",
   "CubePlaytestPage": "/js/CubePlaytestPage.819af3c5.bundle.js",
   "CubeRecordsPage": "/js/CubeRecordsPage.7fc16f0f.bundle.js",
+  "CubeRestorePage": "/js/CubeRestorePage.1f0021ad.bundle.js",
   "CubeSamplePackPage": "/js/CubeSamplePackPage.9ef758e9.bundle.js",
   "DailyP1P1HistoryPage": "/js/DailyP1P1HistoryPage.0027abc9.bundle.js",
   "DashboardPage": "/js/DashboardPage.aaac356c.bundle.js",
@@ -68,7 +69,7 @@
   "UserCubePage": "/js/UserCubePage.04e90633.bundle.js",
   "UserDecksPage": "/js/UserDecksPage.7ad758a5.bundle.js",
   "UserSocialPage": "/js/UserSocialPage.d6b101da.bundle.js",
-  "vendors": "/js/vendors.4c595d6f.bundle.js",
+  "vendors": "/js/vendors.e06cb0ee.bundle.js",
   "VersionPage": "/js/VersionPage.4a140648.bundle.js",
   "VideoPage": "/js/VideoPage.b041f1bf.bundle.js",
   "VideosPage": "/js/VideosPage.20352d97.bundle.js"
