--- a/packages/cdk/package.json
+++ b/packages/cdk/package.json
@@ -16,7 +16,7 @@
   "devDependencies": {
     "@types/jest": "^29.5.14",
     "@types/node": "22.7.9",
-    "aws-cdk": "2.1031.2",
+    "aws-cdk": "^2.1031.2",
     "jest": "^29.7.0",
     "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
@@ -24,6 +24,7 @@
   },
   "dependencies": {
     "aws-cdk-lib": "2.189.1",
+    "aws-cdk-local": "^3.0.1",
     "constructs": "^10.0.0"
   }
 }
