Create a CDK stack just for local environment, that only sets up dynamo table(s).
I tried to have it all work with localstack but there were too many
issues between lambdas, route53 hosted zones, and more.

--- a/packages/scripts/src/docker-compose.yml
+++ b/packages/scripts/src/docker-compose.yml
@@ -44,6 +44,8 @@ services:
       - 4566:4566
     environment:
       - DYNAMODB_HEAP_SIZE=1G
+      # New engine from 4.8 onwards has problems, on restart all cloudformation status is lost
+      - PROVIDER_OVERRIDE_CLOUDFORMATION=engine-legacy
 
 volumes:
   localstack:
