--- a/packages/scripts/src/docker-compose.yml
+++ b/packages/scripts/src/docker-compose.yml
@@ -29,6 +29,9 @@ services:
       - cubecobra
     depends_on:
       - localstack
+    # Force DNS via the localstack container
+    dns:
+      - 10.5.0.5
   localstack:
     # Localstack community does not persist anything out of the box, that is available in localstack-pro.
     # This variant (https://hub.docker.com/r/gresau/localstack-persist) causes the state to be persisted on actions and reloaded when the container starts
@@ -39,7 +42,9 @@ services:
       # Provide initialization script run once localstack is ready. Creates the s3 bucket
       - ./docker/localstack-init.sh:/etc/localstack/init/ready.d/localstack-init.sh
     networks:
-      - cubecobra
+      cubecobra:
+        # Force the containers internal IP
+        ipv4_address: 10.5.0.5
     ports:
       - 4566:4566
     environment:
@@ -54,4 +59,12 @@ volumes:
 networks:
   # Rename. by default network is prefixed by folder name
   cubecobra:
+    driver: bridge
     name: 'cubecobra'
+    # Setup the internal subnet. Per https://github.com/localstack/aws-cdk-local/issues/110 this makes running localstack
+    # and cdklocal in different containers work, which otherwise would fail since CDK accesses buckets with path style and it
+    # would be impossible to know ahead what the hostname is to alias
+    ipam:
+      config:
+        - subnet: 10.5.0.0/16
+          gateway: 10.5.0.1
