--- a/packages/server/.env_EXAMPLE
+++ b/packages/server/.env_EXAMPLE
@@ -9,7 +9,8 @@ DATA_BUCKET="local"
 DOMAIN="localhost:8080"
 DOWNTIME_ACTIVE="false"
 DYNAMO_PREFIX="LOCAL"
-DYNAMO_TABLE="test-table"
+# Requires full name now
+DYNAMO_TABLE="LOCAL_CUBECOBRA"
 ENV="development"
 NITROPAY_ENABLED="false"
 NODE_ENV="development"
