--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -14,10 +14,10 @@
     "dev": "npm run write-git-info && nodemon -r tsconfig-paths/register src/index.ts",
     "publish": "npm run build && node publish.js",
     "clean": "rm -rf dist/ node_modules/ private/ ./src/client",
-    "test": "npx jest --coverage=false",
-    "test:watch": "npx jest --watch --coverage=false",
-    "test:coverage": "npx jest --coverage",
-    "test:ci": "npx jest --coverage --coverageReporters json-summary text",
+    "test": "npm run write-git-info && npx jest --coverage=false",
+    "test:watch": "npm run write-git-info && npx jest --watch --coverage=false",
+    "test:coverage": "npm run write-git-info && npx jest --coverage",
+    "test:ci": "npm run write-git-info && npx jest --coverage --coverageReporters json-summary text",
     "write-git-info": "ts-node scripts/write-git-info.ts"
   },
   "keywords": [],
