--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -142,7 +142,7 @@ jobs:
           fi
 
       - name: Comment Coverage on PR
-        if: github.event_name == 'pull_request'
+        if: github.event_name == 'pull_request' && hashFiles('coverage-report.md') != ''
         uses: marocchino/sticky-pull-request-comment@v2
         with:
           header: coverage
